fix: Dark mode link color

--- a/assets/css/extended/typography.css
+++ b/assets/css/extended/typography.css
@@ -4,14 +4,14 @@
   --link-color: #c64600;
   --link-hover-color: #c64600;
   --link-hover-underline-color: #c64600;
-  --link-underline-shadow: inset 0 -2px var(--link-color);
-  --link-hover-underline-shadow: inset 0 -2px var(--link-hover-underline-color), 0 2px var(--link-hover-underline-color);
+  --link-underline-shadow: 0 1px var(--link-color);
+  --link-hover-underline-shadow: 0 2px var(--link-hover-underline-color);
 }
 
-.dark {
-  --link-color: #E66100;
-  --link-hover-color: #E66100;
-  --link-hover-underline-color: #E66100;
+html[data-theme="dark"] {
+  --link-color: #ff8c38;
+  --link-hover-color: #ff8c38;
+  --link-hover-underline-color: #ff8c38;
 }
 
 .main .profile a,
@@ -27,7 +27,9 @@
 .main .post-header a:hover,
 .main .post-content a:hover,
 .main .entry-content a:hover {
-    box-shadow: var(--link-hover-underline-shadow);
+    background: var(--link-color);
+    color: var(--theme);
+    box-shadow: none;
 }
 
 .main .social-icons a {
